feat: deploy "ham"4

--- a/source/styles/loader.css
+++ b/source/styles/loader.css
@@ -48,7 +48,7 @@
 @keyframes loader {
   0% {
     transform: scaleY(0.1);
-    background: ;
+    background:transparent  ;
   }
   50% {
     transform: scaleY(1);
